# odp-embedded-controller

./: .gitignore  CODEOWNERS  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  check.yml  nostd.yml  rolling.yml
platform/dev-imxrt/: Cargo.toml  build.rs  dev-imxrt.code-workspace  memory.x
platform/dev-imxrt/.cargo/: config.toml
platform/dev-imxrt/src/: board.rs  imxrt.rs  main.rs
platform/dev-npcx/: Cargo.toml  dev-npcx.code-workspace  memory.x  npcx490m-chip.yaml
platform/dev-npcx/.cargo/: config.toml
platform/dev-npcx/src/: board.rs  main.rs
platform/dev-qemu/: Cargo.toml  README.md  build.rs  dev-qemu.code-workspace  memory.x
platform/dev-qemu/.cargo/: config.toml
platform/dev-qemu/src/: board.rs  main.rs
platform/platform-common/: Cargo.toml
platform/platform-common/src/: battery.rs  board.rs  lib.rs
platform/platform-common/src/mock/: battery.rs  mod.rs  thermal.rs  time_alarm.rs
platform/platform-common/src/thermal/: events.rs  fan.rs  mod.rs  prochot.rs
platform/platform-common/src/thermal/sensor/: mod.rs  pts.rs  vts.rs
scripts/: check-all.sh
