[package]
edition = "2021"
license = "MIT"
publish = false
name = "dev-imxrt"
version = "0.1.0"

[[bin]]
bench = false
name = "dev-imxrt"
test = false

[profile.release]
lto = true          # better optimizations
codegen-units = 1
debug = true
opt-level = "z"
panic = "abort"
incremental = false

# Optimize dependencies for size but keep root crate unoptimized for better debuggability
[profile.dev.package."*"]
opt-level = "z"

# Uncomment to turn off optimization for specific dependency (such as when debugging a service)
# [profile.dev.package.dependency-name]
# opt-level = 0

[lints.rust]
warnings = "deny"

[lints.clippy]
correctness = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt", features = [
    "defmt",
    "time-driver-os-timer",
    "time",
    "mimxrt685s",
] }
uart-service = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0", features = [
    "defmt",
] }
static_cell = "2.1.0"
platform-common = { path = "../platform-common", features = ["mock"] }

mimxrt600-fcb = "0.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
teleprobe-meta = { version = "1.1.0", optional = true }

[features]
default = []
teleprobe-test = ["dep:teleprobe-meta"]

[package.metadata.cargo-machete]
ignored = ["cortex-m", "cortex-m-rt"]
